get animate function to accept multiple shapes

--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
         <div class="testing">
             <p>mouse X:<span class="mouse-pos--x"></span></p>
             <p>mouse Y:<span class="mouse-pos--y"></span></p>
+            <p><span class="mouse-click"></span></p>
         </div>
         <div class="wrapper wrapper__all">
             <div class="top-bar__container">
                 <ul class="top-bar__menu-list">
-                    <select
-                        id="menu-shape"
-                        class="top-bar__menu-item top-bar__menu-item--1"
-                    >
+                    <select id="menu-shape" class="top-bar__menu-item top-bar__menu-item--1">
                         <option value="Shapes">Shapes</option>
                         <option value="Squere">Square</option>
                         <option value="Circle">Circle</option>
@@ -38,27 +36,17 @@
                         <option value="Star">Star</option>
                         <option value="Draw shape">Draw shape</option>
                     </select>
-                    <li class="top-bar__menu-item top-bar__menu-item--2">
-                        this
-                    </li>
-                    <li class="top-bar__menu-item top-bar__menu-item--3">
-                        that
-                    </li>
+                    <li class="top-bar__menu-item top-bar__menu-item--2">this</li>
+                    <li class="top-bar__menu-item top-bar__menu-item--3">that</li>
                 </ul>
             </div>
 
             <div class="wrapper wrapper__code-desk">
                 <div class="output-code__container">
                     <div class="output-code__blocks">
-                        <div class="output-code__output output-code__html">
-                            output html here
-                        </div>
-                        <div class="output-code__output output-code__css">
-                            output css here
-                        </div>
-                        <div class="output-code__output output-code__js">
-                            output js here
-                        </div>
+                        <div class="output-code__output output-code__html">output html here</div>
+                        <div class="output-code__output output-code__css">output css here</div>
+                        <div class="output-code__output output-code__js">output js here</div>
                     </div>
                 </div>
 
