creating canvas class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="testing">
             <p>mouse X:<span class="mouse-pos--x"></span></p>
             <p>mouse Y:<span class="mouse-pos--y"></span></p>
-            <p><span class="mouse-click"></span></p>
+            <p><span class="mouse-click">jhg</span></p>
         </div>
         <div class="wrapper wrapper__all">
             <div class="top-bar__container">
