--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
             </div>
 
             <div class="wrapper wrapper__code-desk">
-                <div class="output-code__container">
+                <!-- <div class="output-code__container">
                     <div class="output-code__blocks">
                         <div class="output-code__output output-code__html">output html here</div>
                         <div class="output-code__output output-code__css">output css here</div>
                         <div class="output-code__output output-code__js">output js here</div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="desk__container">
-                    <canvas id="canvas1"></canvas>
                     <div class="desk__main"></div>
                 </div>
             </div>
 
             <button class="btn btn__toggle-view">view</button>
         </div>
+        <canvas id="canvas1"></canvas>
     </body>
 </html>
