--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@
                 </div> -->
 
                 <div class="desk__container">
-                    <div class="desk__main"></div>
+                    <div class="desk__main">
+                        <div class="my-element">
+                            <div class="my-element__container">
+                                <div class="my-element__text">My element</div>
+                            </div>
+                        </div>
+                        <canvas id="canvas1"></canvas>
+                    </div>
                 </div>
             </div>
 
             <button class="btn btn__toggle-view">view</button>
         </div>
-        <canvas id="canvas1"></canvas>
     </body>
 </html>
