--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <div class="desk__container">
                     <div class="desk__main">
-                        <div class="my-element">
+                        <div class="my-element" id="my-element">
                             <div class="my-element__text">My element</div>
                             </div>
                         </div>
