--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="desk__container">
                 <div class="desk__main">
                     <div class="my-element" id="my-element">
+                        <input type="text" class="input-element-text" value="My element" />
                         <div class="my-element__text">My element</div>
                     </div>
                     <!-- <canvas id="canvas1"></canvas> -->
@@ -54,14 +55,16 @@
                 <ul class="style-bar__list">
                     <li class="style-bar__style-item">
                         <h3>Text</h3>
-                        <span>Text siize</span>
-                        <input class="input" type="number" name="text size" value="32" min="1" />
+                        <span>Text size</span>
+                        <input class="input" type="number" name="text size" value="2" min="1" step=".1" />
+                        <span>Padding</span>
+                        <input class="input" type="number" name="padding" value="2" min="0" step=".1" />
                         <span>Text color</span>
                         <input class="input" type="color" name="background color picker" value="#000000" />
                         <span>Text center</span>
                         <input class="input" type="checkbox" name="text center" />
                         <span>Uppercase</span>
-                        <input class="input" type="checkbox" name="uppercase" />
+                        <input class="input" type="checkbox" name="uppercase" value="false" />
                     </li>
                     <li class="style-bar__style-item">
                         <h3>Background color</h3>
@@ -73,18 +76,39 @@
                         <h3>Rounded corners</h3>
                         <span>rounded corners</span>
                         <input class="input" type="checkbox" name="rounded corners" />
-                        <input class="input" type="number" name="rounded corners value" value="50" />
+                        <input
+                            class="input"
+                            type="number"
+                            name="rounded corners value"
+                            value="0"
+                            min="0"
+                            max="100"
+                            step=".1"
+                        />
                     </li>
                     <li class="style-bar__style-item">
                         <h3>Outline</h3>
+
                         <span>outline</span>
                         <input class="input" type="checkbox" name="outline" />
+
                         <span>all sides</span>
                         <input class="input" type="radio" name="outline sides" checked />
+
                         <span>every side separately</span>
                         <input class="input" type="radio" name="outline sides" />
+
                         <span>width</span>
-                        <input class="input" type="number" name="outline value width" value="0.5" id="border-width" />
+                        <input
+                            id="border-width"
+                            class="input"
+                            type="number"
+                            name="outline value width"
+                            value="0.5"
+                            min="0"
+                            step=".1"
+                        />
+
                         <span>type</span>
                         <select class="input" name="border type select" id="border-type">
                             <option value="solid">solid</option>
@@ -98,6 +122,7 @@
                             <option value="none">none</option>
                             <option value="hidden">hidden</option>
                         </select>
+
                         <span>color</span>
                         <input class="input" type="color" name="outline color" />
                     </li>
@@ -105,23 +130,29 @@
                         <h3>Shadow</h3>
                         <span>shadow</span>
                         <input class="input" type="checkbox" name="shadow" />
+
                         <span>left and right</span>
-                        <input class="input" type="range" name="offset x" min="-10000" max="10000" />
-                        <input class="input" type="number" name="offset x" min="-10000" max="10000" />
+                        <input class="input" type="range" name="offset x" value="0" min="-20" max="20" />
+                        <input class="input" type="number" name="offset x" value="0" min="-20" max="20" />
+
                         <span>top and bottom</span>
-                        <input class="input" type="range" name="offset y" min="-10000" max="10000" />
-                        <input class="input" type="number" name="offset y" min="-10000" max="10000" />
+                        <input class="input" type="range" name="offset y" min="-20" max="20" value="0" />
+                        <input class="input" type="number" name="offset y" min="-20" max="20" value="0" />
+
                         <span>blur radius</span>
-                        <input class="input" type="range" name="blur radius" min="-1000" max="1000" />
-                        <input class="input" type="number" name="blur radius" min="-1000" max="1000" />
+                        <input class="input" type="range" name="blur radius" min="0" max="20" />
+                        <input class="input" type="number" name="blur radius" min="0" max="20" />
+
                         <span>spread</span>
-                        <input class="input" type="range" name="spread" min="-1000" max="1000" />
-                        <input class="input" type="number" name="spread" min="-1000" max="1000" />
+                        <input class="input" type="range" name="spread" min="0" max="50" value="0" />
+                        <input class="input" type="number" name="spread" min="0" max="50" value="0" />
+
                         <span>shadow color</span>
-                        <input class="input" type="color" name="shadow color" />
+                        <input class="input" type="color" name="shadow color" value="#000000" />
+
                         <span>transparency</span>
-                        <input class="input" type="range" name="transparency" min="-1000" max="1000" />
-                        <input class="input" type="number" name="transparency" min="-1000" max="1000" />
+                        <input class="input" type="range" name="transparency" min="0" max="1" value=".5" step=".1" />
+                        <input class="input" type="number" name="transparency" min="0" max="1" value=".5" step=".1" />
                     </li>
                 </ul>
             </aside>
