project basicaly working
need to add: 1.style section enable/disable 2. text add blink cursor and and shpe 3. dark theme

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             </div>
 
             <div class="desk__container">
+                <input type="text" class="input" id="input-text" value="My element" spellcheck="false" />
                 <div class="desk__main">
                     <div class="my-element" id="my-element">
-                        <input type="text" class="input-element-text" value="My element" />
-                        <div class="my-element__text">My element</div>
+                        <div class="my-element__text"></div>
                     </div>
                     <!-- <canvas id="canvas1"></canvas> -->
                 </div>
