functional, adding new dark mode

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="src/sass/main.scss" />
+        <!-- <link rel="stylesheet" href="src/sass/main.scss" /> -->
+        <link id="style-sheet" rel="stylesheet" href="src/sass/mainDark.scss" />
         <script type="module" src="src/js/controller.js" defer></script>
         <title>Element Mchine | by Dan Geiger</title>
     </head>
@@ -38,6 +39,7 @@
                     </select>
                     <li class="top-bar__menu-item top-bar__menu-item--2">this</li>
                     <li class="top-bar__menu-item top-bar__menu-item--3">that</li>
+                    <button id="dark-theme">Dark theme</button>
                 </ul>
             </div>
 
